fixed some stuff again

--- a/Report/pages/angular.tex
+++ b/Report/pages/angular.tex
@@ -8,7 +8,7 @@ Angular is an open-source front-end web application framework which is written i
 
 When using the Angular framework, a developer will implement his view logic using Components, Modules, Services and many more pre-defined Angular classes. This section describes which elements are offered by the Angular framework and how they should be used.
 
-\Subsubsection[components]{Components}
+\Subsubsection[components]{Angular Components}
 
 An Angular component can be compared to a View and ViewModel combination from the \gls{mvvm} pattern. It is composed of three files. There is one \gls{html} and one \gls{css} file which make up the View. The ViewModel is a \gls{ts} file which contains the essential logic for the View. The component is always declared in the \gls{ts} file with the \lstcode{@Component} decorator, see \myautoref{lst:example-component.ts}.
 
@@ -30,9 +30,9 @@ Like many \gls{mvvm} frameworks, Angular supports bindings. These are used to di
 
 In case data from the ViewModel should be passed on to another component, which is referenced via its \gls{html} tag, the square bracket notation is used (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}). It is also possible to use the \lstcode{bind-} prefix \zB \lstcode{bind-CurrentItem="subItem"}. In order to work, both methods require that the receiving component needs a property in its ViewModel which is declared with the \lstcode{@Input()} decorator, see \mylineref{lst:example-component.ts}{comp_input}.
 
-For events, the standard \gls{js} round bracket notation (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom components can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS observables are used, \lstcode{Observable<T>} or \lstcode{Subject<T>} are also possible \cite{rxjs}.
+For events, the standard \gls{js} round bracket notation (\mylineref{lst:nav-item-component.html}{navItem_event}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom components can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS observables are used, \lstcode{Observable<T>} or \lstcode{Subject<T>} are also possible \cite{rxjs}.
 
-Forms often use elements like a \enquote{Combobox} or a \enquote{Dropdown} menu. The \lstcode{SelectedItem} property of these elements is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read and also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achieved using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem=\allowbreak "userSelection"}. \cite{angularTemplateSyntax}
+Forms often use elements like a \enquote{Combobox} or a \enquote{Dropdown} menu. Usually, the \lstcode{SelectedItem} property of these elements is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read and also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets for example \lstcode{[(SelectedItem)]="userSelec\-tion"}. The two-way binding can also be achieved using the \lstcode{bindon-} prefix \zB \lstcode{bindon-\allowbreak SelectedItem=\allowbreak "userSelection"}. \cite{angularTemplateSyntax}
 
 \Subsubsection{Template Syntax - Directives}
 
@@ -45,25 +45,25 @@ The third built-in directive is the switch-case directive which lets the develop
 
 \Subsubsection{Template Syntax - Pipes}
 
-Angular also offers support for pipes which are very similar to \gls{wpf} converters, with the exception that an Angular pipe only works in one direction. This is useful for formatting the \enquote{raw} data \zB \lstcode{\{\{title | uppercase | lowercase\}\}}. As shown in the example, pipes can be chained. It is also possible to add parameters to a pipe, one example is the \lstcode{date} pipe, where the name for a date format can be passed as an argument \zB \lstcode{\{\{ myDate | date:'longDate'\}\}}. Angular offers many built-in pipes, but it is also possible to create a custom one. To do so, the developer creates a new class which implements the \lstcode{PipeTransform} interface and uses the \lstcode{@Pipe()} decorator as shown in \myautoref{lst:boolean-yes-no-pipe.ts}. \cite{angularTemplateSyntax}
+Angular also offers support for pipes which are very similar to \gls{wpf} converters, with the exception that an Angular pipe only works in one direction. This is useful for formatting the \enquote{raw} data \zB \lstcode{\{\{title | uppercase | lowercase\}\}}. As shown in the example, pipes can be chained. It is also possible to add parameters to a pipe, one example is the \lstcode{date} pipe, where the name of a date format can be passed as an argument \zB \lstcode{\{\{ myDate | date:'longDate'\}\}}. Angular offers many built-in pipes, but it is also possible to create a custom one. To do so, the developer creates a new class which implements the \lstcode{PipeTransform} interface and uses the \lstcode{@Pipe()} decorator as shown in \myautoref{lst:boolean-yes-no-pipe.ts}. \cite{angularTemplateSyntax}
 
 \file{boolean-yes-no-pipe.ts}{A custom pipe to convert a boolean to 'yes' or 'no'.}{JavaScript}
 
 
-\Subsubsection{Services}
+\Subsubsection{Angular Services}
 
 An Angular service is a class which is used to do a specific, well-defined task. It usually performs operations on data or communicates with outside services for the purpose of obtaining or pushing data to an \gls{api}.
 
 \file{menu-item-service.ts}{A service for managing menu items.}{JavaScript}
 
-Angular services are written in \gls{ts}. They are a class with the \lstcode{@Injectable()} decorator (\mylineref{lst:menu-item-service.ts}{service_cons}) which makes this class visible to the \gls{di} components of the Angular framework. With exception of the decorator, a service is simply a class which can implement interfaces and declare methods like any other class.
+Angular services are written in \gls{ts}. A Service is a class with the \lstcode{@Injectable()} decorator (\mylineref{lst:menu-item-service.ts}{service_cons}) which makes this class visible to the \gls{di} components of the Angular framework. With exception of the decorator, a service is simply a class which can implement interfaces and declare methods like any other class.
 
 Services are used to encapsulate functionality which helps promote reusability and modularity. To determine whether a method should be implemented in a service or a component, the question is: Is the method related to how something is displayed? If the answer to this question is yes, then the method should be implemented in a component, if the answer is no, it should be implemented in a service class.
 
 
-\Subsubsection[ngmodules]{Modules}
+\Subsubsection[ngmodules]{Angular Modules}
 
-When talking about modules in an Angular application, it is important to distinguish between Angular modules, also called NgModules, and \gls{js} (ES2015) modules. Those two are different concepts and can be used side by side. While \gls{js} modules are used to manage collections of \gls{js} objects, NgModules are more like containers for related chunks of code. An NgModule contains components, services, and/or other code files which all belong to one domain, a workflow, or are performing similar tasks. From an architectural perspective they bear great resemblance to a code library like a \gls{dll}. Like \gls{dll}s, they can import other NgModules and choose which classes, services, and/or components should be exported and which should only be visibile to classes inside the NgModule in question.
+When talking about modules in an Angular application, it is important to distinguish between Angular modules, also called NgModules, and \gls{js} (ES2015) modules. Those two are different concepts and can be used side by side. While \gls{js} modules are used to manage collections of \gls{js} objects, NgModules are more like containers for related chunks of code. An NgModule contains components, services, and/or other code files which all belong to one domain, a workflow, or are performing similar tasks. From an architectural perspective they bear great resemblance to a code library like a \gls{dll}. Like \gls{dll}s, they can import other NgModules, choose which classes, services, and/or components should be exported and which should only be visibile to classes inside the NgModule in question.
 
 \file{app-module.ts}{The Jukebox AppModule file.}{JavaScript}
 
@@ -77,15 +77,17 @@ Every Angular application is a \gls{spa}, which means that the client downloads 
 
 \file{navigation-bar.html}{The Jukebox navigation bar and router-outlet.}{HTML5}
 
-Routing is done through the \lstcode{<router-outlet />} tag in \gls{html} and the \lstcode{RouterModule}. The \lstcode{<router-outlet />} tag tells Angular that the developer wants to display different \enquote{subsites} at this location in the \gls{dom}. Usually an application has some kind of menu or navigation bar which is always visible and then the rest of content is displayed through the router outlet, as shown in \mylineref{lst:navigation-bar.html}{navbar_router}.
+Routing is done through the \lstcode{<router-outlet />} tag in \gls{html} and the \lstcode{Router\-Module}. The \lstcode{<router-outlet />} tag tells Angular that the developer wants to display different \enquote{subsites} at this location in the \gls{dom}. Usually an application has some kind of menu or navigation bar which is always visible and then the rest of the content is displayed through the router outlet, as shown in \mylineref{lst:navigation-bar.html}{navbar_router}.
 
-Angular's routing module also changes the URL in the browser's address bar. This allows for deep links into the site, but also requires any web server which serves this \gls{spa} to return the same \gls{html} for all URLs without a redirect to the index.html route, otherwise it would break Angular's routing.
+Angular's routing module also changes the \gls{url} in the browser's address bar. This allows for deep links into the site, but also requires any web server which serves this \gls{spa} to return the same \gls{html} for all \glspl{url} without a redirect to the index.html route, otherwise it would break Angular's routing.
 
-\file{security-routing-module.ts}{The Jukebox security route definitions.}{JavaScript}
 
 To define the application routes and map their components, the \lstcode{RouterModule\allowbreak .forRoot} or \lstcode{RouterModule.forChild} methods are used (\mylineref{lst:security-routing-module.ts}{routing_forChild}). The \lstcode{RouterModule.forRoot} method may only be called once and is usually located in the app-routing.module.ts file. Following the Angular code style guidelines, every module should have its own routing module. This is possible through the \lstcode{RouterModule.forChild} method which may be called as often as needed.
 
-The \textbf{path} argument must be set for each route. In case of a simple route, which maps to a \textbf{component}, the component in question must be specified (\mylineref{lst:security-routing-module.ts}{routing_simpleComponent}). A route can also be used as an organizing element for the application's URLs and so may not have a component, but multiple routes (\mylineref{lst:security-routing-module.ts}{routing_children}). This is usually done once per module and allows the developer to create well-structured URLs. There are many more arguments which define details such as path matching strategies or specific router-outlets.
+The \textbf{path} argument must be set for each route. In case of a simple route, which maps to a \textbf{component}, the component in question must be specified (\mylineref{lst:security-routing-module.ts}{routing_simpleComponent}). A route can also be used as an organizing element for the application's \glspl{url} and so may not have a component, but multiple routes (\mylineref{lst:security-routing-module.ts}{routing_children}). This is usually done once per module and allows the developer to create well-structured \glspl{url}. There are many more arguments which define details such as path matching strategies or specific router-outlets.
+
+\file{security-routing-module.ts}{The Jukebox security route definitions.}{JavaScript}
+
 
 One very important feature of the Angular routing system is that of guards. A guard is a method which is called by the \lstcode{RouterModule} if a certain condition is met. Guards are specified in the route configuration, as shown in \mylineref{lst:security-routing-module.ts}{routing_guard}. The conditions are \lstcode{canActivate}, \lstcode{canActivateChildren}, \lstcode{canDeactive}, \lstcode{canDeactivateChildren}, and \lstcode{canLoad}. Guards are always invoked after a navigation is queried, but before it is completed. The return value is of type \lstcode{Observable<boolean>}, \lstcode{Promise<boolean>}, or \lstcode{boolean} and determines whether the navigation may proceed. In the example of the \lstcode{AuthGuard} (\mylineref{lst:security-routing-module.ts}{routing_guard}), the \lstcode{AuthenticationService.isLoggedIn()} method is used to determine whether the user was logged in and can therefore now be logged out.
 
@@ -93,23 +95,26 @@ Angular also allows the use of asynchronous routing, also called lazy loading. T
 
 \Subsubsection{Dependency Injection and Interception}
 
+\glslocalreset{di}
+
 The Angular framework relies heavily on \gls{di} and, as of version 4.3 \cite{interceptorAngularVersion} also offers interception. As described in \myref{subsubsec:ngmodules}, the configuration of Angular's \gls{di} capabilities is achieved through the metadata of NgModules. Every component and provider listed in the module can be requested. Additionally, it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so, the configuration will override any configuration specified at the NgModule level. To make the injection work, Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though, if required by a certain action, it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope, which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the component tree structure (see \myautoref{fig:componentHierarchy.png}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
 
-\autoImg{componentHierarchy.png}{Component hierarchy in the Angualr framework. \cite{componentHierarchy}}
+\autoImg{componentHierarchy.png}{Component hierarchy in the Angular framework. \cite{componentHierarchy}}
 
 As of version 4.3 Angular offers the possibility of interception. Angular's interception is limited to only the \lstcode{HttpClient} class, contrary to other \gls{di} frameworks where any class can be intercepted. To specify one or multiple interceptors, the developer has to configure a provider as shown in \mylineref{lst:app-module.ts}{module_interceptor}.
 
-\file{authentication-interceptor.ts}{The Jukebox interceptor to automatically include a JWT Token.}{JavaScript}
 
 The interceptor is a class which implements the \lstcode{HttpInterceptor} interface and thus the \\ \hspace*{1cm} \lstcode{intercept((req: HttpRequest<any>, next: HttpHandler): \\ \hspace*{2cm} Observable<HttpEvent<any>>} \\ method. In the Jukebox project, it was used to automatically include a \gls{jwt} as well as the \enquote{Content-Type} header (\myautoref{lst:authentication-interceptor.ts}). With this technique it is also possible to catch any request which returns a 401 \gls{http} status code, get a new \gls{jwt} access token and then retry the request without any service noticing that the initial request failed.
+
+\file{authentication-interceptor.ts}{The Jukebox interceptor to automatically include a JWT Token.}{JavaScript}
 
 
 \Section{Angular Material}
 
 Angular Material is a framework, also developed by Google, which provides pre-built controls. These include buttons, trees, datepickers and many more. All of these controls are styled with the Google Material style guidelines in mind. To be able to use this framework, the developer has to install it via \gls{npm} or a similar package management tool. \cite{angularMaterial}
 
-\Subsubsection{Components}
-Each control is an Angular component. This means that controls can be used in the \gls{html} by including the corresponding tag, as shown in \mylineref{lst:navigation-bar.html}{navbar_mat_toolbar}. Any \gls{html} tag which starts with the \lstcode{mat-} prefix references an Angular Material control/component.
+\Subsubsection{Angular Material Components}
+Each control is an Angular component. This means that controls can be used in the \gls{html} by including the corresponding tag, as described in \myref{subsubsec:components}. Any \gls{html} tag which starts with the \lstcode{mat-} prefix references an Angular Material control/component.
 
 This prefix was changed from \lstcode{md-} to the current \lstcode{mat-}. At the same time, Angular Material changed how the components are organized into modules. Previously, there was a single module called \lstcode{MaterialModule} which became deprecated and was replaced by dedicated modules for each single control, \zB \lstcode{MatButtonModule}. The Jukebox project currently uses 17 different controls, which results in having to import 17 different modules. To keep the app.moudle.ts file tidy, a custom module was created. This so-called \lstcode{Material\-MetaModule} imports and exports all 17 \enquote{submodules}, so that the \lstcode{AppModule} only has to import this one meta module.
 
@@ -130,15 +135,15 @@ Once the \lstcode{MatDialog.open()} method is called, the required component wil
 
 Using intuitive icons is a big part of the visual design of any application. There are many ways how icons can be encoded and used, \zB they can be images or vector graphics. Angular Material uses another, also popular method called \enquote{Font Icons}. The same concept is used by FontAwesome \cite{fontAwesome} and many others. A font usually displays some sort of letter but technically it is just a way of representing a scalable image. Icons are mostly used in buttons or menus which are all designed to work with some sort of font. Also, fonts are an old concept which means support for them is fairly good.
 
-There are many ways to use the Material icon set. The Jukebox project mainly uses the \lstcode{<mat-icon />} tag (see \mylineref{lst:navigation-bar.html}{navbar_icon}), but it is also possible to associate \gls{css} classes with specific icons or use the \lstcode{<svg />} tag. It should be noted, though, that the latter two examples are usually needed if the provided icons aren't sufficient or if \zB another icon font is used in addition. The font of the Material icon set has to be included via \lstcode{@font-face} \gls{css} rule in order to use the icon set.
+There are many ways to use the Material icon set. The Jukebox project mainly uses the \lstcode{<mat-icon />} tag (see \mylineref{lst:navigation-bar.html}{navbar_icon}), but it is also possible to associate \gls{css} classes with specific icons or use the \lstcode{<svg />} tag. It should be noted, though, that the latter two examples are usually needed if the provided icons aren't sufficient or if \zB another icon font is used in addition. The font of the Material icon set has to be included via the \lstcode{@font-face} \gls{css} rule in order to use the icon set.
 
-During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the unicode explicitly. This method has the drawback that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding unicodes. Since this thesis is focused on compatibility between Electron and Angular, none of these tools were evaluated. \cite{materialIcons}
+During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge browsers and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the unicode explicitly. This solution did resolved the issue in the Internet Explorer and Edge browsers. This method has the drawback that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding unicodes. Since this thesis is focused on compatibility between Electron and Angular, none of these tools were evaluated. \cite{materialIcons}
 
 
 \Section{Websockets}
 
 The \gls{http} protocol was designed for web pages and is based on client-initiated communication. There are techniques like long polling which simulate a two-way communication channel but even there, the client needs to initialize the communication. This becomes a problem in web applications which rely on events or push notifications rather than on polling. In the Jukebox project, one requirement was that a music player could be remote-controlled. Websockets were used to push events like \enquote{Next} or \enquote{Play/Pause} to the player.
 
-Websockets can be used by calling the \lstcode{WebSocket.send()} and \lstcode{WebSocket.close()} methods as well as listening to the various events. Another approach is to wrap the WebSocket into a RxJS \lstcode{Subject}, as shown in \myautoref{lst:websocket.ts} \cite{rxjs} \cite{js_websockets}. To do so, the developer creates an \lstcode{Observable} which binds to the events of the \lstcode{WebSocket} object (lines \ref{line:websocket_observable_start} to \ref{line:websocket_observable_stop}). Then an \lstcode{Observer} is created (line \ref{line:websocket_observer}). In this example, the \lstcode{Observer} is an object which has a \lstcode{next()} method that is empty. This is due to the fact that in the Jukebox project notifications are only received through the websocket. This \lstcode{next()} method is normally used to call the \lstcode{WebSocket.send()} method to send data back to the server. A RxJS \lstcode{Subject} is created from the \lstcode{Observer} and \lstcode{Observable} objects. This \lstcode{Subject} can then be subscribed to in order to receive incoming messages. To send messages the \lstcode{Subject.next()} method may be used.
+Websockets can be used by calling the \lstcode{WebSocket.send()} and \lstcode{WebSocket\allowbreak .close()} methods as well as listening to the various events. Another approach is to wrap the WebSocket into a RxJS \lstcode{Subject}, as shown in \myautoref{lst:websocket.ts} \cite{rxjs} \cite{js_websockets}. To do so, the developer creates an \lstcode{Observable} which binds to the events of the \lstcode{WebSocket} object (lines \ref{line:websocket_observable_start} to \ref{line:websocket_observable_stop}). Then an \lstcode{Observer} is created (line \ref{line:websocket_observer}). In this example, the \lstcode{Observer} is an object which has a \lstcode{next()} method that is empty. This is due to the fact that in the Jukebox project notifications are only received through the websocket. This \lstcode{next()} method is normally used to call the \lstcode{WebSocket.send()} method to send data back to the server. A RxJS \lstcode{Subject} is created from the \lstcode{Observer} and \lstcode{Observable} objects. This \lstcode{Subject} can then be subscribed to in order to receive incoming messages. To send messages the \lstcode{Subject.next()} method may be used.
 
 \file{websocket.ts}{Sample websocket usage.}{JavaScript}
