--- a/Report/pages/electron.tex
+++ b/Report/pages/electron.tex
@@ -28,7 +28,7 @@ As all renderer processes are isolated from the main process as well as each oth
 
 The \lstcode{ipcMain} is only accessible in the main process. It is used to handle asynchronous as well as synchronous messages sent from a renderer process (\myautoref{lst:ipcMain.js}). To handle messages the \lstcode{ipcMain.on()} method is used. Its first argument is a string which is referred to as \enquote{channel} and used as a key. The same channel has to be used for the sender and the receiver. The second argument is a delegate which takes an event object as well as many arguments. This delegate will be executed every time a renderer process sends a message using the specified channel.
 
-The \lstcode{ipcMain} object also provides several other methods, \zB a method to execute a listener only once, another method to remove a single or all listeners. As shown in \myautoref{lst:ipcMain.js}, the main process can reply via the \lstcode{event.returnValue} property which results in a synchronous message. It could also send a new message to the renderer which would be an example of an asynchronous communication. The \lstcode{ipcMain} object does not contain a send method like the \lstcode{ipcRenderer}, since it would not be clear where to send the message. Instead, the \lstcode{webContents} object of a given \lstcode{BrowserWindow} provides this method. This is the same object held by the \lstcode{event.sender} property. \cite{ipcMain}
+The \lstcode{ipcMain} object also provides several other methods, \zB a method to execute a listener only once, another method to remove a single or all listeners. As shown in \myautoref{lst:ipcMain.js}, the main process can reply via the \lstcode{event.returnValue} property which results in a synchronous message. The main process could also send a new message to the renderer which would be an example of an asynchronous communication. The \lstcode{ipcMain} object does not contain a send method like the \lstcode{ipcRenderer}, since it would not be clear where to send the message. Instead, the \lstcode{webContents} object of a given \lstcode{BrowserWindow} provides this method. This is the same object held by the \lstcode{event.sender} property. \cite{ipcMain}
 
 The \lstcode{ipcRenderer} object is only available inside a renderer process and is similar to the \lstcode{ipcMain} object. The only notable differences are the \lstcode{send} methods. It is possible to send asynchronous as well as synchronous messages. The \lstcode{ipcRenderer.send()} method always sends the message to the main process. If the message needs to be sent to a different renderer process, the \lstcode{ipcRenderer.sendTo()} method may be used. \cite{ipcRenderer}
 
@@ -44,7 +44,7 @@ Node.js is a \gls{js} runtime environment which offers libraries for a variety o
 
 The \enquote{fs} library grants access to the filesystem \cite{nodejsFS}. It is used to check whether the Windows start menu folder for this application exists, and otherwise create it (\mylineref{lst:setupWindowsNotifications.js}{swn_fs}). Without the \gls{asp} server this library would  be used to access the music files.
 
-The \enquote{os} library provides access to operating system specific information and methods \cite{nodejsOS}. It is used to determine the current operating system and architecture to be able to register the correct notification libraries.
+The \enquote{os} library provides access to operating system specific information and methods \cite{nodejsOS}. It is used to determine the current operating system and architecture in order to register the correct notification libraries.
 
 \Section[accessElectronApis]{Accessing Electron APIs from within Angular}
 
@@ -62,12 +62,12 @@ This package checks the user agent property to determine whether the application
 
 \Section[electronMenus]{Menus}
 
-A big difference between web pages and traditional desktop applications is the placement of menus. Web applications often integrate menus into the web page, sometimes as navigation bars, sometimes at prominent locations in the layout. For desktop applications the placement of the menu is rather clear. For Windows applications it is a menu bar right under the top border the application window and for Ubuntu (Unity) and OSX it is also a menu bar, but located at the top of your screen.
+A big difference between web pages and traditional desktop applications is the placement of menus. Web applications often integrate menus into the web page, sometimes as navigation bars, sometimes at prominent locations in the layout. For desktop applications the placement of the menu is rather clear. For Windows applications it is a menu bar right under the top border of the application window and for Ubuntu (Unity) and OSX it is also a menu bar, but located at the top of the screen.
 
 \Subsubsection{Application Menu}
 
 
-For the Jukebox project, a custom \lstcode{MenuItem} class was created: the \lstcode{Angular\-MenuItem}. This is due to the fact that a menu is needed for both the web version as well as the desktop version. With this approach, the custom class can be used for the entire project and only a small part, namely the \lstcode{MenuItemService}, depends on the Electron \gls{api}s. Since Electron is doing some initialization, it is not possible to use a custom \lstcode{MenuItem} object, even if the custom object has the same signature. Therefore, a converter method was implemented, as shown in \myautoref{lst:createElectronMenuItem.ts}. This method creates an instance of \lstcode{Electron.MenuItem} for each \lstcode{AngularMenuItem} recursively.
+For the Jukebox project, a custom \lstcode{MenuItem} class was created: the \lstcode{Angular\-MenuItem}. This is due to the fact that a menu is needed for both the web version as well as the desktop version. With this approach, the custom class can be used for the entire project and only a small part, namely the \lstcode{MenuItemService}, depends on the Electron \gls{api}s. Since Electron is doing some initialization, it is not possible to use a custom \lstcode{MenuItem} object, even if the custom object has the same signature. Therefore, a converter method was implemented, as shown in \myautoref{lst:createElectronMenuItem.ts}. This method creates an instance of the \lstcode{Electron.MenuItem} class for each \lstcode{AngularMenuItem} recursively.
 
 \revMark{maybe say something more about this}
 
@@ -79,7 +79,7 @@ For the Jukebox project, a custom \lstcode{MenuItem} class was created: the \lst
 
 Another style of a menu is the system tray and its context menu. Especially for applications which are supposed to run in the background and only show a notification when an event occurs, the ability to minimize the application to the system tray is very important. Electron supports this feature with the \lstcode{Electron.remote.Tray} \gls{api}.
 
-The \lstcode{Electron.remote.Tray} object takes a \lstcode{Electron.remote.NativeImage} or a \lstcode{string} as constructor arguments. Both variants were tried, but the \lstcode{string} variant did not show the icon, even though the system tray was there and clickable. Once the system tray object is created, a menu may be set.
+The \lstcode{Electron.remote.Tray} object takes an \lstcode{Electron.remote.NativeImage} or a \lstcode{string} as constructor arguments. Both variants were tried, but the \lstcode{string} variant did not show the icon, even though the system tray was there and clickable. Once the system tray object is created, a menu may be set.
 
 \file{browserWindowClose.js}{The modified \lstcode{BrowserWindow.close()} event.}{JavaScript}
 
@@ -107,7 +107,7 @@ Electron uses the \gls{html} 5 notification \gls{api} to send basic notification
 
 The globally available \lstcode{Notification} object is used to manage the permission to display notifications for each web page. This is done through the static \lstcode{Notification.permission} property which returns one of the three following values: \enquote{granted}, \enquote{denied}, or \enquote{default}. The \enquote{default} value tells the developer that the user's choice is unknown at this moment. In this state, the browser behaves as if the user denied permission, which results in showing no notifications at all. Using the static \lstcode{Notification.requestPermission()} method, the user is asked whether he wants to see notifications or not.
 
-Once permission is granted, a notification can be displayed, as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object, but these are not implemented in all browsers and therefore should not be relied on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api}, but is needed for the Windows operating system. If the property is omitted, Windows will not show any notification at all. The property can be used in non-Windows environments without risk because the constructor uses templates. The property will simply be ignored when it is not needed. \cite{mdnNotification}
+Once permission is granted, a notification can be displayed, as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object, but these are not implemented in all browsers and therefore should not be relied on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api}, but is needed for the Windows operating system. If the property is omitted, Windows will not show any notifications at all. The property can be used in non-Windows environments without risk because the constructor uses templates. The property will simply be ignored when it is not needed. \cite{mdnNotification}
 
 \file{html-notification.ts}{Displaying a basic HTML notification.}{JavaScript}
 
@@ -118,7 +118,7 @@ Under Windows, the \enquote{electron-windows-notifications} \cite{winNot} and \e
 
 The \enquote{electron-windows-notifications} package offers two kinds of notifications. The first type is called \lstcode{TileNotification}. This notification updates the primary or secondary tiles of the application. In this case the application must be run inside the \gls{uwp} model. The second type is called \lstcode{ToastNotification}. This is the \enquote{standard} notification which is usually displayed on the bottom right corner of the screen and can later on be found in the Windows Action Center.
 
-A prerequisite for showing any kind of notification is that the application has set up an \lstcode{appId}. Configuring this \lstcode{appId} is a multi-step procedure. First, a start menu folder has to be created for the application. Then, a shortcut to the application has to be placed in this folder. During testing, it was discovered that it does not matter where this shortcut points to in order to show the notification. If, however, the shortcut points to the wrong file, the click action on the notification might not work as expected. Next, the \enquote{System.AppUserModel.ID} data store property of the shortcut must be set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry so it shows the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. During the startup sequence of the application, the \lstcode{app.setAppUserModelId()} method has to be called. Finally, the \lstcode{appId} property must be set for every notification object, be it the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification}. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique. A \gls{guid} was used for the Jukebox project.
+A prerequisite for showing any kind of notification is that the application has set up an \lstcode{appId}. Configuring this \lstcode{appId} is a multi-step procedure. First, a start menu folder has to be created for the application. Then, a shortcut to the application has to be placed in this folder. During testing, it was discovered that it does not matter where this shortcut points to in order to show the notification. If, however, the shortcut points to the wrong file, the click action on the notification might not work as expected. Next, the \enquote{System.AppUserModel.ID} data store property of the shortcut must be set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry to show the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. During the startup sequence of the application, the \lstcode{app.setAppUserModelId()} method has to be called. Finally, the \lstcode{appId} property must be set for every notification object, be it the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification}. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique. A \gls{guid} was used for the Jukebox project.
 
 The notification package uses the \enquote{nodert-win10-au} native Node module to call native Windows \gls{api}s. The \lstcode{ToastNotification} and \lstcode{TileNotification} objects are used similarly to their corresponding C++ classes. Most notably, the notifications are constructed using an \gls{xml} template. This template allows the placement of banner images, cropped images, and many more visual elements in the notification.
 
@@ -145,9 +145,9 @@ Electron makes this possible with the \lstcode{app.makeSingleInstance()} method.
 
 \Subsubsection{Mac}
 
-For macOS the \enquote{node-mac-notifier} package may be used. This package allows the developer to specify the \lstcode{canReplay} property which is of type \lstcode{boolean}. When set to true the user will be presented with a text input field which may be used for a reply. Apart from this reply feature the \enquote{node-mac-notifier} package offers no other features.
+For macOS the \enquote{node-mac-notifier} package may be used. This package allows the developer to specify the \lstcode{canReply} property which is of type \lstcode{boolean}. When set to true the user will be presented with a text input field which may be used for a reply. Apart from this reply feature the \enquote{node-mac-notifier} package offers no other features.
 
-As of Electron v2 the documentation states that more functionality of the \gls{html}5 \gls{api} is implemented, but only for macOS. Now the \lstcode{actions} property on the \lstcode{Notification} object may be used. An action may have a label and must be a button. When more than one action is specified for a notification, only the first one is shown. To see all available actions the user will have to hover the mouse over the first action. If the \lstcode{hasReply} property is set to true no actions will be shown. Furthermore, the app needs to be signed and have its \lstcode{NSUserNotificationAlertStyle} set to \lstcode{alert} in the \lstcode{Info.plist}. This could not be tested due to the very recent update of the Electron framework.
+As of Electron v2 the documentation states that more functionality of the \gls{html} 5 \gls{api} is implemented, but only for macOS. Now the \lstcode{actions} property on the \lstcode{Notification} object may be used. An action may have a label and must be a button. When more than one action is specified for a notification, only the first one is shown. To see all available actions the user will have to hover the mouse over the first action. If the \lstcode{hasReply} property is set to true no actions will be shown. Furthermore, the app needs to be signed and have its \lstcode{NSUserNotificationAlertStyle} set to \lstcode{alert} in the \lstcode{Info.plist}. This could not be tested due to the very recent update of the Electron framework.
 
 \Subsubsection{Linux}
 
