--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -183,10 +183,11 @@
 
 @online{codeFirst,
  author = {Tutorials, Entity Framework},
+ year = {2018},
  title = {Code First development with Entity Framework},
  url = {http://www.entityframeworktutorial.net/code-first-with-entity-framework.aspx},
  address = {http://www.entityframeworktutorial.net},
- urldate = {2017-02-17}
+ urldate = {2018-08-29}
 }
 
 
@@ -587,10 +588,11 @@
 
 @online{modelFirst,
  author = {Tutorials, Entity Framework},
+ year = {2018},
  title = {Model First development with Entity Framework},
  url = {http://www.entityframeworktutorial.net/model-first-with-entity-framework.aspx},
  address = {http://www.entityframeworktutorial.net},
- urldate = {2017-02-17}
+ urldate = {2018-08-29}
 }
 
 
@@ -716,7 +718,7 @@
  year = {04.01.2015},
  title = {ASP.NET: Understanding OWIN, Katana, and the Middleware Pipeline},
  url = {http://johnatten.com/2015/01/04/asp-net-understanding-owin-katana-and-the-middleware-pipeline/},
- urldate = {2018-08-01}
+ urldate = {2018-08-29}
 }
 
 
