--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -12,7 +12,7 @@
 \newacronym{hmac}{HMAC}{keyed-Hashing for Message Authentication}
 \newacronym{iis}{IIS}{Internet Information Services}
 \newacronym{gui}{GUI}{Graphical User Interface}
-\newacronym{ide}{IDE}{Integrated Development Environments}
+\newacronym{ide}{IDE}{Integrated Development Environment}
 \newacronym{com}{COM}{Component Object Model}
 \newacronym{guid}{GUID}{Globally Unique Identifier}
 \newacronym{wdc}{WDC}{Windows Dev Center}
@@ -30,7 +30,6 @@
 \newacronym{di}{DI}{Dependency Injection}
 \newacronym{dll}{DLL}{Dynamically Linked Library}
 \newacronym{exe}{*.exe}{Executable}
-\newacronym{dlls}{DLLs}{Dynamically Linked Libraries}
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{tpl}{TPL}{Task Parallel Library}
 \newacronym{tcp}{TCP}{Transmission Control Protocol}
