--- a/Report/pages/asp.tex
+++ b/Report/pages/asp.tex
@@ -6,17 +6,17 @@
 
 \Subsubsection{NuGet}
 
-The \gls{asp} framework relies on the NuGet Package Manager for its modularity. The NuGet Package Manager is very similar to Node's \gls{npm}. The packages to be used in a project can either be configured using the command line, or directly editing the *.csproj file, or using the \gls{gui} tools most .NET Core \gls{ide}s provide. This makes it possible to download the necessary parts of the \gls{asp} framework only. Microsoft also allows third parties to publish libraries on its NuGet platform. This was also done in the Jukebox project for some of the middlewares.
+The \gls{asp} framework relies on the NuGet Package Manager for its modularity. The NuGet Package Manager is very similar to Node's \gls{npm}. The packages to be used in a project can either be configured using the command line, directly editing the *.csproj file, or using the \gls{gui} tools most .NET Core \glspl{ide} provide. This makes it possible to download the necessary parts of the \gls{asp} framework only. Microsoft also allows third parties to publish libraries on its NuGet platform. This was done in the Jukebox project for some of the middlewares.
 
 \Subsubsection[owin]{OWIN}
 
-\gls{owin} is another big aspect of \gls{asp}'s modularity. \gls{owin} is not a specific implementation, but rather a specification which helps developers to create a modular architecture and was used to create the \gls{asp} framework. Katana is the codename Microsoft gave its \gls{owin} implementation and should not be confused with \gls{owin} itself.
+\gls{owin} is another big aspect of \gls{asp}'s modularity. \gls{owin} is not a distinct implementation, but rather a specification which helps developers to create a modular architecture and was used to create the \gls{asp} framework. Katana is the codename Microsoft gave its \gls{owin} implementation and should not be confused with \gls{owin} itself. \cite{owinKatana}
 
 The most important concept for a developer is that of a middleware. In the \gls{owin} specification, a middleware is defined as an exchangeable programming block with the following signature: \lstcode{Func<IDictionary<string, object>, Task>}. This means a middleware is a delegate which is given an \lstcode{IDictionary} object containing key-value-pairs and which has to return a \lstcode{Task} object. By using a \lstcode{Task}, Microsoft enables programmers to take advantage of the \gls{tpl} and its asynchronous programming model \cite{tpl}.
 
 Middlewares are usually provided by the \gls{asp} framework, or they can be created by the developer for specific tasks. In order to create a middleware the developer has two options. He may simply create a delegate with the correct signature. Since this is similar to functional programming, Microsoft also provided a method to use classes. When a class is used, the \gls{asp} framework will check whether this class contains a method which matches the signature of a middleware. Using this method, the developer may take advantage of \gls{di} for any dependencies the custom middleware requires. \cite{owinKatana}
 
-Another concept defined by the \gls{owin} standard is the middleware pipeline. Every \gls{http} request will traverse this pipeline and be processed along the way. A request is often referred to as context and is contained in the \lstcode{IDictionary} object of the middleware delegate. Depending on the circumstances, a middleware might alter the request and call the next middleware, or complete the request. Each request starts at the first middleware. Yet not every request reaches the last middleware, since it might be processed before it gets to the end. Once a request is processed, it travels back to the beginning of the pipeline. This is illustrated in \myautoref{fig:owin-middleware-chain.png}.
+Another concept defined by the \gls{owin} standard is the middleware pipeline. Every incomming \gls{http} request will traverse this pipeline and be processed along the way. A request is often referred to as context and is contained in the \lstcode{IDictionary} object of the middleware delegate. Depending on the circumstances, a middleware might alter the request and call the next middleware, or complete the request. Each request starts at the first middleware. Yet not every request reaches the last middleware, since it might be processed before it gets to the end. Once a request is processed, it travels back to the beginning of the pipeline. This is illustrated in \myautoref{fig:owin-middleware-chain.png}.
 
 \autoImg{owin-middleware-chain.png}{Example of an OWIN middleware pipeline. \cite{owinKatana}}
 
@@ -35,13 +35,13 @@ The \lstcode{Startup} class is used to configure an \gls{asp} application. It is
 
 \gls{di} is an integral part of the \gls{asp} framework and is configured in the \lstcode{ConfigureServices()} method. This method has one parameter of type \lstcode{IServiceCollection} which is an interface similar to the Autofac \lstcode{Container\-Builder} class. In order to make classes and framework parts available, such as the \gls{mvc} functionality of \gls{asp}, they have to be registered using this interface.
 
-The \lstcode{IServiceCollection} interface provides many features which are sufficient for most projects, but it is not possible to configure interception using this interface. If the developer needs or wants to use interception, he has to change the signature of the \lstcode{ConfigureServices()} method to return an \lstcode{IServiceProvider} interface. This interface is Microsoft's abstraction of a \lstcode{Container} class which is used to resolve dependencies. The Jukebox project uses the Autofac \gls{di} framework was used, because it supports all of \gls{asp}'s \gls{di} interfaces \cite{autofacCoreDoc}. It should be noted that it is also possible to use other \gls{di} frameworks, but custom adapters may have to be implemented \cite{aspCustomDI}.
+The \lstcode{IServiceCollection} interface provides many features which are sufficient for most projects, but it is not possible to configure interception using this interface. If the developer needs or wants to use interception, he has to change the signature of the \lstcode{ConfigureServices()} method to return an \lstcode{IServiceProvider} interface. This interface is Microsoft's abstraction of a \lstcode{Container} class which is used to resolve dependencies. The Jukebox project uses the Autofac \gls{di} framework, because it supports all of \gls{asp}'s \gls{di} interfaces \cite{autofacCoreDoc}. It should be noted that it is also possible to use other \gls{di} frameworks, but custom adapters may have to be implemented \cite{aspCustomDI}.
 
 The Jukebox project uses a dual approach. \gls{asp} components are registered via the \lstcode{IServiceCollection} interface because extension methods are provided by the framework. All other classes are registered using the \lstcode{ContainerBuilder} class to enable interception. Then all registrations from the \lstcode{IServiceCollection} interface are transferred to the \lstcode{ContainerBuilder} using the \lstcode{Populate()} method. Finally, a \lstcode{IServiceProvider} is created using the  \lstcode{AutofacServiceProvider} class. This is illustrated in \myautoref{lst:configureJukebox.cs}.
 
 \file{configureJukebox.cs}{Configuring the \lstcode{IServiceCollection} in combination with an Autofac \lstcode{ContainerBuilder}.}{NC_CSharp}
 
-Once all components are registered, the \gls{asp} framework calls the \lstcode{Configure()} method. This method is used to build the \gls{owin} middleware pipeline. Its first argument is of type \lstcode{IApplicationBuilder} and is required. The second and third arguments are of type \lstcode{IHostingEnvironment} and \lstcode{ILog\-gerFactory}, respectively, and are optional.
+Once all components are registered, the \gls{asp} framework calls the \lstcode{Configure()} method. This method is used to build the \gls{owin} middleware pipeline. The method's first argument is of type \lstcode{IApplicationBuilder} and is required. The second and third arguments are of type \lstcode{IHostingEnvironment} and \lstcode{ILog\-gerFactory}, respectively, and are optional.
 
 The \lstcode{IApplicationBuilder} interface is used to set up the pipeline, as shown in \myautoref{lst:configure.cs}. \gls{asp} provides extension methods for all of the framework's middlewares. There are multiple options to register a custom middleware. The \lstcode{IApplicationBuilder.Run()} method can be used to specify a delegate which will run and terminate the pipeline at this point. In order to chain middlewares the \lstcode{IApplicationBuilder.Use()} method can be used. This method also takes a middleware delegate as parameter. The \lstcode{IApplicationBuilder.UseMiddleware<T>()} method is used for middlewares which are written as a class. \cite{aspMiddleware}
 
@@ -91,7 +91,7 @@ For the transfer of objects or large amounts of data the \gls{http} body should 
 
 \file{dataTransfer.cs}{Different data transfer methods in ASP.NET Core.}{NC_CSharp}
 
-For the Jukebox project, many classes like the \lstcode{PlayerCommand} class were written. These classes are referred to as a \gls{dto} and are usually \lstcode{sealed} classes which only contain properties and constructors. Each \gls{dto} is annotated with the \lstcode{[DataContract]} attribute and every property to be serialized is annotated with the \lstcode{[DataMember]} attribute. Some properties are used to convert data from one type to another. These are not annotated with the \lstcode{[DataMember]} attribute and are therefore ignored during serialization. This works well for most data types, the only exception are enums. Enums are serialized as integers by default, because the integer is the underlying type of a default enum in C\#. The default behavior can be changed with the \lstcode{[JsonConverter(typeof(StringEnumConverter))]} attribute to serialize an enum as a string. This improves readability on the front-end part and provides compatibility for the \gls{ts} implementation of an enum. \cite{mvcModelBinding}
+For the Jukebox project, many classes like the \lstcode{PlayerCommand} class were written. These classes are referred to as a \glspl{dto} and are usually \lstcode{sealed} classes which only contain properties and constructors. Each \gls{dto} is annotated with the \lstcode{[DataContract]} attribute and every property to be serialized is annotated with the \lstcode{[DataMember]} attribute. Some properties are used to convert data from one type to another. These are not annotated with the \lstcode{[DataMember]} attribute and are therefore ignored during serialization. This works well for most data types, the only exception are enums. Enums are serialized as integers by default, because the integer is the underlying type of a default enum in C\#. The default behavior can be changed with the \lstcode{[JsonConverter(typeof(StringEnumConverter))]} attribute to serialize an enum as a string. This improves readability on the front-end part and provides compatibility for the \gls{ts} implementation of an enum. \cite{mvcModelBinding}
 
 \Section{Security in ASP.NET Core}
 
@@ -109,7 +109,7 @@ For the Jukebox project, the \gls{jwt} Bearer authentication was chosen \cite{jw
 
 Configuring the \gls{jwt} package is a multi-step procedure. First, the \lstcode{TokenVali\-dationParameters} are set, as shown in \myautoref{lst:configureJwt.cs}. Then, a \lstcode{JwtTokenOptions} object is configured (\myautoref{lst:configureJwtTokenOptions.cs}) and a method for creating a \gls{jwt} token is implemented (\myautoref{lst:generateBasicAuthToken.cs}). Finally, the \gls{jwt} package is added to the middleware pipeline using the \lstcode{app.UseAuthentication()} extension method.
 
-For the \lstcode{TokenValidationParameter}, a \lstcode{SymmetricSecurityKey} object is created which must be identical to the key object that is used to validate a \gls{jwt} token later on. Then, an \enquote{Issuer} and an \enquote{Audience} are set, both are optional. This serves the purpose of identifying the application (issuer) and the client (audience). Finally, the option to validate the lifetime of a token is set to \lstcode{true} and the clock skew is set to zero. \cite{jwtTokenAuth}
+For the \lstcode{TokenValidationParameters}, a \lstcode{SymmetricSecurityKey} object is created which must be identical to the key object that is used to validate a \gls{jwt} token later on. Then, an \enquote{Issuer} and an \enquote{Audience} are set, both are optional. This serves the purpose of identifying the application (issuer) and the client (audience). Finally, the option to validate the lifetime of a token is set to \lstcode{true} and the clock skew is set to zero. \cite{jwtTokenAuth}
 
 \file{configureJwt.cs}{Configuration of the JWT package.}{NC_CSharp}
 
@@ -117,7 +117,7 @@ The \lstcode{JwtTokenOptions} object was written specifically for the Jukebox pr
 
 \file{configureJwtTokenOptions.cs}{Configuration of the \lstcode{JwtTokenOptions}.}{NC_CSharp}
 
-The last step in setting up the \gls{jwt} authentication package is to create a method which issues a new token. This method, shown in \myautoref{lst:generateBasicAuthToken.cs}, is part of the \lstcode{JwtAuthenticationService} in the Jukebox project. A \lstcode{ClaimsIdentity} object and a \lstcode{JwtTokenOptions} object are passed into the method. \lstcode{ClaimsIdentity} is the C\# object to manage a user in a claims-based authorization system, as described in \myref{subsubsec:claimsAuth}. First, a list of claims is instantiated. For this list, the \gls{jwt} Subject \enquote{Sub}, \gls{jwt} ID \enquote{Jti}, and Issued At \enquote{Iat} claims are created. The \gls{jwt} subject claim usually contains the username or email address. The \gls{jwt} ID claim contains a unique identifier, in the Jukebox project a \gls{guid} is used. The Issued At claim contains the current timestamp in \gls{utc} time. Then all claims stored in the \lstcode{ClaimsIdentity} are added to the claims list. These are claims defined by the web application and could contain a claim which grants access to the administrative section of the application. Then, a \lstcode{JwtSecurityToken} object is created. The \lstcode{JwtTokenOptions} are used to set the expiration, the issuer, and so on. Next, a refresh token is created. For the sake of simplicity, the Jukebox project uses a \gls{guid} as a refresh token. Finally, an \lstcode{AuthToken} \gls{dto} object is created which is used to send the information back to the client. So far, the \lstcode{JwtSecurityToken} is a C\# object which still needs to be serialized into a \gls{json} string. The serialization is handled by the \lstcode{JwtSecurityTokenHandler.WriteToken()} method. Both the \lstcode{JwtSecurityToken} and the \lstcode{JwtSecurityTokenHandler} classes are provided by the \gls{jwt} package.
+The last step in setting up the \gls{jwt} authentication package is to create a method which issues a new token. This method, shown in \myautoref{lst:generateBasicAuthToken.cs}, is part of the \lstcode{JwtAuthenticationService} in the Jukebox project. A \lstcode{ClaimsIdentity} object and a \lstcode{JwtTokenOptions} object are passed into the method. \lstcode{ClaimsIdentity} is the C\# object to manage a user in a claims-based authorization system, as described in \myref{subsubsec:claimsAuth}. First, a list of claims is instantiated. For this list, the \gls{jwt} Subject \enquote{Sub}, \gls{jwt} ID \enquote{Jti}, and Issued At \enquote{Iat} claims are created. The \gls{jwt} subject claim usually contains the username or email address. The \gls{jwt} ID claim contains a unique identifier, in the Jukebox project a \gls{guid} is used. The Issued At claim contains the current timestamp in \gls{utc} time. Then all claims stored in the \lstcode{ClaimsIdentity} are added to the claims list. These are claims defined by the web application and could contain a claim which grants access to the administrative section of the application. Then, a \lstcode{JwtSecurityToken} object is created. The \lstcode{JwtTokenOptions} are used to set the expiration, the issuer, and so forth. Next, a refresh token is created. For the sake of simplicity, the Jukebox project uses a \gls{guid} as a refresh token. Finally, an \lstcode{AuthToken} \gls{dto} object is created which is used to send the information back to the client. So far, the \lstcode{JwtSecurityToken} is a C\# object which still needs to be serialized into a \gls{json} string. The serialization is handled by the \lstcode{JwtSecurityTokenHandler.WriteToken()} method. Both the \lstcode{JwtSecurityToken} and the \lstcode{JwtSecurityTokenHandler} classes are provided by the \gls{jwt} package.
 
 \newpage
 
@@ -125,9 +125,9 @@ The last step in setting up the \gls{jwt} authentication package is to create a 
 
 \Subsubsection[claimsAuth]{Claims-Based Authorization}
 
-After a client is authenticated, the \gls{jwt} token will be read and all claims will be extracted. These claims are used to check whether the client is authorized to execute an action. A claim describes an individual right or action this client possesses. It can also be proof of a piece of information about the client, such as his email address, birth date, or phone number.
+After a client is authenticated, the \gls{jwt} token will be read and all claims will be extracted. These claims are used to check whether the client is authorized to execute an action. A claim describes an individual right or action this client possesses. It can also be proof of a piece of information about the client, such as his email address, birth date, or phone number. \cite{claimsBasedAuth}
 
-Two custom claims are implemented in the Jukebox project. First, the \lstcode{UsernameClaim} which is used to store the username of a client. Second, the \lstcode{RoleClaim}. This claim is used to identify a client as \enquote{SystemAdmin}, \enquote{IndexAdmin}, or \enquote{PlayerAdmin} and grants permission to execute certain actions. Claims will be serialized when they are sent to the client inside the \gls{jwt} token. To identify a claim after it has been serialized, the claim needs a unique type which is saved as a string. By convention, a \gls{url} is used. For example the \enquote{http://Jukebox/Claims/Security/Username} string is assigned to the \lstcode{UsernameClaim} type in the Jukebox project. \cite{claimsBasedAuth}
+Two custom claims are implemented in the Jukebox project. First, the \lstcode{User\-name\-Claim} which is used to store the username of a client. Second, the \lstcode{RoleClaim}. This claim is used to identify a client as \enquote{SystemAdmin}, \enquote{IndexAdmin}, or \enquote{PlayerAdmin} and grants permission to execute certain actions. Claims will be serialized when they are sent to the client inside the \gls{jwt} token. To identify a claim after it has been serialized, the claim needs a unique type which is saved as a string. By convention, a \gls{url} is used. For example the \enquote{http://Jukebox/Claims/Security/Username} string is assigned to the \lstcode{UsernameClaim} type in the Jukebox project.
 
 \Section{Custom Middlewares}
 
@@ -148,7 +148,7 @@ Once such an exception is thrown, it will be caught in the catch block of the mi
 
 \gls{asp} is intended for use in combination with the Razor view engine to create traditional web applications. A \gls{spa} works quite differently, because there only exists one \gls{html} file for the entire application instead of one file for every subsite. Additionally, the front-end framework, in this case Angular, oftentimes comes with its own routing component. This means that a user might see a \gls{url} like \enquote{http://jukebox/account/settings}. This \gls{url} is used by the front-end framework to display the settings component, but the back-end knows nothing about such a \gls{url} and therefore would return a \gls{http} 404 error code.
 
-These \glspl{url} are called deep links and are used by many web applications. The \lstcode{SpaMiddleware} is a piece of code which enables the deep link feature for web applications hosted via \gls{asp}. It has to be added to the middleware pipeline before the \gls{mvc} middleware and, since no authentication is needed, should also be added before any authentication middleware. As shown in \myautoref{lst:spaMiddleware.cs}, the middleware checks every request's \gls{url} to determine whether it is a deep link or not.
+These \glspl{url} are called deep links and are used by many web applications. The \lstcode{SpaMiddleware} is a piece of code which enables the deep link feature for \glspl{spa} hosted via \gls{asp}. It has to be added to the middleware pipeline before the \gls{mvc} middleware and, since no authentication is needed, should also be added before any authentication middleware. As shown in \myautoref{lst:spaMiddleware.cs}, the middleware checks every request's \gls{url} to determine whether it is a deep link or not.
 
 Whether a \gls{url} is a deep link or not is determined by a set of rules. Most importantly, the middleware checks whether the request has a file extension or not. This is needed because the index.html file references other files such as the bundle.js file. Furthermore, a configuration object is used. This configuration object stores paths which are not deep links because they are part of another middleware or feature of the web server. The Jukebox project uses the Swagger web \gls{api} documentation tool which can be accessed through the \gls{url} \enquote{http://jukebox/swagger} \cite{swagger}. Therefore, the Swagger \gls{url} is not recognized as a deep link but as a \enquote{SpecialRoute}, which causes the middleware to pass the request further down the pipeline.
 
@@ -165,11 +165,11 @@ When a deep link is found the middleware sets the \gls{http} status code to 200 
 To manage its users and song index, the Jukebox project uses the \gls{ef} \cite{efCore}. \gls{ef} is an \gls{orm} framework which enables developers to work with databases using .NET objects and programming paradigms like Fluent \gls{api}. It also eliminates the need to write \gls{sql} code. \gls{ef} features many different database providers to access \gls{mysql}, \gls{mssql}, SQLite, and many other database engines.
 
 \Subsubsection{SQLite}
-For the Jukebox project, a datastore was needed, but an entire database server would have been too unwieldy in its configuration and maintenance. Therefore, the SQLite database engine was chosen \cite{sqlite}. SQLite is a self-contained, file-based database engine which does not require any server application to connect to. Compared to a \gls{mssql} or a \gls{mysql} database engine, there are some limitations \cite{sqliteLimitations}, but these features are not needed in the Jukebox project.
+For the Jukebox project, a datastore is needed, but an entire database server would have been too unwieldy in its configuration and maintenance. Therefore, the SQLite database engine was chosen \cite{sqlite}. SQLite is a self-contained, file-based database engine which does not require any server application to connect to. Compared to a \gls{mssql} or a \gls{mysql} database engine, there are some limitations \cite{sqliteLimitations}, but these features are not needed in the Jukebox project.
 
 \Subsubsection{Configuration}
 
-When configuring a database with \gls{ef}, the developer may choose between the \enquote{Model-First-Approach} and the \enquote{Code-First-Approach}. In the \enquote{Model-First-Approach} an \gls{er} is created and saved as a *.edmx file. The developer can manipulate this model via \gls{gui} tools. The *.edmx file is then used to create a class structure which represents the database. This approach, however, requires an \gls{ide} which supports *.edmx modeling files. Also, it lacks flexibility because the classes created from the model are not meant to be edited, yet the \gls{gui} tools oftentimes limit functionality.
+When configuring a database with \gls{ef}, the developer may choose between the \enquote{Model-First-Approach} \cite{modelFirst} and the \enquote{Code-First-Approach} \cite{codeFirst}. In the \enquote{Model-First-Approach} an \gls{er} is created and saved as a *.edmx file. The developer can manipulate this model via \gls{gui} tools. The *.edmx file is then used to create a class structure which represents the database. This approach, however, requires an \gls{ide} which supports *.edmx modeling files. Also, it lacks flexibility because the classes created from the model are not meant to be edited, yet the \gls{gui} tools oftentimes limit functionality.
 
 The \enquote{Code-First-Approach} is more widely used and also the recommended way of configuring a database with \gls{ef} \cite{efCreateModel}. This approach is more tedious, because the developer will have to implement all classes instead of having them generated by the \gls{ef} code generation tool. The advantage is a far greater control over the model. This approach offers the developer three options for the configuration of his database: Annotations, Fluent \gls{api}, and/or accepting the default conventions.
 
@@ -187,7 +187,7 @@ A mixture of all three approaches has proven to be more practical than sticking 
 
 \Subsubsection{Migrations}
 
-An application's data model will grow during the development of the application. \gls{ef} supports changes in the data model with its migrations feature. A new migration can be created using the command line tools with the command \lstcode{dotnet ef migrations add <migrationName>}. Similiarly, the \lstcode{remove} command can be used to remove a migration. With the \lstcode{add} command \gls{ef} will create a migration class and then update the model snapshot class. The model snapshot class is used as a base line for comparison when a new migration is added. The created migration class contains code which describes the differences between the old model, as detailed in the snapshot, and the current model, as specified in the class structure. Every migration is derived from the abstract base class \lstcode{Migration} and has to implement the abstract \lstcode{Up()} and \lstcode{Down()} methods. As shown in \myautoref{lst:migration.cs}, the \lstcode{Up()} method contains instructions on how to apply the migration and the \lstcode{Down()} method contains instructions on how to revert the migration. \cite{efMigrations}
+An application's data model will grow during the development of the application. \gls{ef} supports changes in the data model with its migrations feature. A new migration can be created using the command line tools with the command \lstcode{dotnet ef migrations add <migrationName>}. Similiarly, the \lstcode{remove} command can be used to remove a migration. With the \lstcode{add} command \gls{ef} will create a migration class and then update the model snapshot class. The model snapshot class is used as a base line for comparison when a new migration is added. The created migration class contains code which describes the differences between the old model, as detailed in the snapshot, and the current model, as specified by the class structure. Every migration is derived from the abstract base class \lstcode{Migration} and has to implement the abstract \lstcode{Up()} and \lstcode{Down()} methods. As shown in \myautoref{lst:migration.cs}, the \lstcode{Up()} method contains instructions on how to apply the migration and the \lstcode{Down()} method contains instructions on how to revert the migration. \cite{efMigrations}
 
 There are two ways to apply one or more migrations. The first solution is to use the \gls{ef} command line tools to directly migrate the database using the command \lstcode{dotnet ef database update}. This is usually the preferred method, but may not be feasible depending on the setup of the database. When direct migration is not possible, the \gls{ef} command line tools can also be used to create a \gls{sql} script. This is achieved using the command \lstcode{dotnet ef migrations script}. Both methods offer the option to revert the database by specifying the \lstcode{From} and \lstcode{To} migrations explicitly.
 
@@ -207,11 +207,13 @@ The database projects contain one project with specific SQLite database classes 
 
 The framework solution folder contains the \lstcode{Jukebox.Common} and \lstcode{Jukebox\allowbreak .Common\allowbreak .Abstractions} projects. All interfaces for business and validation logic classes are part of the \lstcode{Jukebox.Common.Abstractions} project. Furthermore, the domain classes and the abstract data context are part of this \gls{dll}. All business and validation implementations are contained in the \lstcode{Jukebox\allowbreak .Common} project. This separation makes it possible to swap implementations without breaking too many dependencies.
 
+\image[scale=.8]{projectStructure.png}{C\# project structure.}
+
+
 Every good application should be tested to a certain degree to ensure that it works correctly. The Jukebox project does not contain many tests, because it is a proof-of-concept application. However, acceptance tests are easy to write and maintain, and thus provide an economic compromise between development time and quality.
 
 Finally, the \lstcode{JukeboxAPI} project contains the \gls{asp} specific code, like controller classes and the \lstcode{Startup} and \lstcode{Program} classes. This is the only project which references any \gls{asp} specific \glspl{dll}.
 
-\image[scale=.8]{projectStructure.png}{C\# project structure.}
 
 \Subsubsection{Services and Validation}
 
@@ -221,7 +223,7 @@ For each domain there is one service class. These services are accessed through 
 
 \file{IPlayerService.cs}{The \lstcode{IPlayerService} interface.}{NC_CSharp}
 
-Validation is an important aspect of any application. The back-end has to verify that the data sent by a client is structurally and semantically correct and that the client is authorized to execute the action. This is done by interception in the Jukebox project. Each service has an associated interceptor as well as an associated validator class. The interceptor decides which aspects of a method have to be validated and the validator class contains the logic for the validation. This separation is necessary because the interceptor is tightly coupled to the service it is intercepting, while the validator should only be concerned with the object it is supposed to validate. The \lstcode{IPlayerService} interface contains a method called \lstcode{AddSongToPlayerAsync()} (\myautoref{lst:IPlayerService.cs}). This method will be intercepted and the interceptor has to validate that both the player and the song with the given ID do exist. For this purpose the interceptor holds a reference to the \lstcode{PlayerValidator} and the \lstcode{SongValidator} objects which contain the needed methods for validation, as shown in \myautoref{lst:addSongToPlayerAsync.cs}. If the validation methods were to reside within the interceptor, this scenario would not be possible.
+Validation is an important aspect of any application. The back-end has to verify that the data sent by a client is structurally and semantically correct and that the client is authorized to execute the action. This is done by interception in the Jukebox project. Each service has an associated interceptor as well as an associated validator class. The interceptor decides which aspects of a method have to be validated and the validator class contains the logic for the validation. This separation is necessary because the interceptor is tightly coupled to the service it is intercepting, while the validator should only be concerned with the object it is supposed to validate. The \lstcode{IPlayerService} interface (\myautoref{lst:IPlayerService.cs}) contains a method called \lstcode{AddSongToPlayerAsync()}. This method will be intercepted and the interceptor has to validate that both the player and the song with the given ID do exist. For this purpose the interceptor holds a reference to the \lstcode{PlayerValidator} and the \lstcode{SongValidator} objects which contain the needed methods for validation, as shown in \myautoref{lst:addSongToPlayerAsync.cs}. If the validation methods were to reside within the interceptor, this scenario would not be possible.
 
 \file{addSongToPlayerAsync.cs}{Intercepting the \lstcode{AddSongToPlayerAsync} method.}{NC_CSharp}
 
